# chess

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Logic/: Board.cpp  Board.h  Piece.cpp  Piece.h  Square.cpp  Square.h
